fittings/crates/macros/tests/ui/pass/basic.rs
#[fittings::service]
trait MinimalService {}

fn main() {}
