fittings/crates/macros/tests/ui/fail/on_attr_args.rs
#[fittings::service(name = "hello")]
trait NotSupportedYet {}

fn main() {}
